<resources>
    <string name="app_name">Medicine App</string>

    <!-- Menu Strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add Medicine</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <!-- Settings -->
    <string name="push_notifications">Push Notifications</string>
    <string name="auto_refill">Automatically Refill Medicine</string>
    <string name="app_theme">Color Theme</string>

    <string-array name="color_themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <!-- About -->
    <string name="about_text">This app was created for COP4656 Mobile Device Applications at Florida Polytechnic University
        during the Fall 2017 semester. This app was the result of a collaboration between Mathieu Morin, Jacob Thornton &amp; Daniel Febles.</string>
    <string name="about_purpose">The purpose of this application is to create a Medicine Reminder App to help those taking medication.
        This app was designed to remind the user when to take their medicine, as well as notify them when they are running low.</string>
    <string name="about_us">About Us</string>

    <!-- AddEdit -->
    <string name="name">Name</string>
    <string name="pills_left">Pills Left</string>
    <string name="dosage"># Per Dose </string>
    <string name="days">Days</string>
    <string name="Time">Time</string>
    <string name="sunday">U</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">R</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="btn_add">Add Medicine</string>
    <string name="btn_edit">Update Medicine</string>
    <string name="btn_delete">Delete Medicine</string>

    <string name="view">View</string>
</resources>
